feat: Backend new project field: "priority"
